--- a/print/m_indukan_printlist.html
+++ b/print/m_indukan_printlist.html
@@ -38,7 +38,7 @@
 			</tr>
 	</thead>
 	<tbody>
-				<tr>
+					<tr>
 				<td rowspan="2" align="center" style="font-size:24px;">
 					<strong> N-2 </strong>
 				</td>
@@ -59,32 +59,13 @@
 			</tr>
 				<tr>
 				<td rowspan="2" align="center" style="font-size:24px;">
-					<strong> N-1 </strong>
+					<strong> N-2 </strong>
 				</td>
 				<td class="a" >
 					<strong>SPK 1.144 N-42</strong>
 				</td>
 				<td class="a">
-					<STRONG>ABC123</STRONG>
-				</td>
-			</tr>
-			<tr>
-				<td class="b">
-					<strong>&nbsp;  </strong>
-				</td>
-				<td class="b">
-					<strong>SPK 1.144 N-42 x DND 641 D-7 </strong>
-				</td>
-			</tr>
-				<tr>
-				<td rowspan="2" align="center" style="font-size:24px;">
-					<strong> N-1 </strong>
-				</td>
-				<td class="a" >
-					<strong>SPK 1.144 N-42</strong>
-				</td>
-				<td class="a">
-					<STRONG>ABC123</STRONG>
+					<STRONG>14101959</STRONG>
 				</td>
 			</tr>
 			<tr>
